[package]
name = "youtube_no_si_redux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures = "0.3.31"
log = { version = "0.4.28", features = ["release_max_level_info"] }
teloxide = { version = "0.17.0", features = [
    "rustls",
    "ctrlc_handler",
    "throttle",
], default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[profile.release]
opt-level = 3
# Maximum optimization
lto = "fat"
codegen-units = 1